--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1041,7 +1041,9 @@
 
                                     @if (module.GroupBuyModuleType is GroupBuyModuleType.CarouselImages)
                                     {
-                                        foreach (List<CreateImageDto> carouselImages in CarouselModules)
+                                        List<List<CreateImageDto>> carouselModules = CarouselModules.Select(s => s.Where(w => w.ModuleNumber == module.ModuleNumber).ToList()).Where(w => w.Count > 0).ToList();
+
+                                        foreach (List<CreateImageDto> carouselImages in carouselModules)
                                         {
                                             <div class="row">
                                                 <div class="col-2">
@@ -1055,13 +1057,13 @@
                                                 </div>
                                                 <div class="col-10 ">
                                                     <Field>
-                                                        <FilePicker @ref="CarouselFilePickers[CarouselModules.IndexOf(carouselImages)]"
+                                                        <FilePicker @ref="CarouselFilePickers[carouselImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value - 1]"
                                                                     Disabled="carouselImages.Count >= 5"
                                                                     Multiple
                                                                     Changed="@(async (e) => await OnImageModuleUploadAsync(e,
                                                                                                                            carouselImages,
-                                                                                                                           CarouselModules.IndexOf(carouselImages) + 1,
-                                                                                                                           CarouselFilePickers[CarouselModules.IndexOf(carouselImages)],
+                                                                                                                           carouselImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value,
+                                                                                                                           CarouselFilePickers[carouselImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value - 1],
                                                                                                                            ImageType.GroupBuyCarouselImage))"
                                                                     ShowMode="FilePickerShowMode.List"
                                                                     Accept=".jpg, .png, .svg, .jpeg, .webp">
@@ -1097,7 +1099,7 @@
                                                                 </Div>
                                                             </FileTemplate>
                                                             <ButtonsTemplate>
-                                                                <Progress Value="@CarouselFilePickers[CarouselModules.IndexOf(carouselImages)].GetProgressPercentage()" />
+                                                                <Progress Value="@CarouselFilePickers[carouselImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value - 1].GetProgressPercentage()" />
                                                             </ButtonsTemplate>
                                                         </FilePicker>
                                                     </Field>
@@ -1140,7 +1142,7 @@
                                                     </Div>
                                                     <Div class="col-10 pt-2 pb-4">
                                                         <select class="form-select form-select"
-                                                                @onchange=@((e) => OnStyleCarouselChange(e, carouselImages, CarouselModules.IndexOf(carouselImages) + 1))>
+                                                                @onchange=@((e) => OnStyleCarouselChange(e, carouselImages, carouselImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value))>
                                                             <option>Select Style</option>
                                                             @foreach (object? enumValue in Enum.GetValues(typeof(StyleForCarouselImages)))
                                                             {
