Commit For PK-581

--- a/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
@@ -142,12 +142,12 @@
                                 <Button Type="ButtonType.Button" 
                                         Clicked="@(e => RefundApproved(context))" 
                                         Class="btn btn-sm btn-primary">
-                                    Approve
+                                    @L["Approve"]
                                 </Button>
                                 <Button Type="ButtonType.Button" 
                                         Clicked="@(e => RefundReject(context))" 
                                         Class="btn btn-sm btn-danger">
-                                    Reject
+                                    @L["Reject"]
                                 </Button>
                             </Div>
                         }
