--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -29,7 +29,7 @@
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
     <div class="row">
         <div class="col-1">
-            <h3>@L["Order"]</h3>
+            <h3>@L["OrdersList"]</h3>
         </div>
         <br />
         <div class="col-12 text-lg-end"
