--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1166,7 +1166,9 @@
 
                                     @if (module.GroupBuyModuleType is GroupBuyModuleType.BannerImages)
                                     {
-                                        foreach (List<CreateImageDto> bannerImages in BannerModules)
+                                        List<List<CreateImageDto>> bannerModules = BannerModules.Select(s => s.Where(w => w.ModuleNumber == module.ModuleNumber).ToList()).Where(w => w.Count > 0).ToList();
+
+                                        foreach (List<CreateImageDto> bannerImages in bannerModules)
                                         {
                                             <div class="row">
                                                 <div class="col-2">
@@ -1180,13 +1182,13 @@
                                                 </div>
                                                 <div class="col-10 ">
                                                     <Field>
-                                                        <FilePicker @ref="BannerFilePickers[BannerModules.IndexOf(bannerImages)]"
+                                                        <FilePicker @ref="BannerFilePickers[bannerImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value - 1]"
                                                                     Disabled="bannerImages.Count >= 5"
                                                                     Multiple
                                                                     Changed="@(async (e) => await OnImageModuleUploadAsync(e,
                                                                                                                            bannerImages,
-                                                                                                                           BannerModules.IndexOf(bannerImages) + 1,
-                                                                                                                           BannerFilePickers[BannerModules.IndexOf(bannerImages)],
+                                                                                                                           bannerImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value,
+                                                                                                                           BannerFilePickers[bannerImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value - 1],
                                                                                                                            ImageType.GroupBuyBannerImage))"
                                                                     ShowMode="FilePickerShowMode.List"
                                                                     Accept=".jpg, .png, .svg, .jpeg, .webp">
@@ -1222,19 +1224,19 @@
                                                                 </Div>
                                                             </FileTemplate>
                                                             <ButtonsTemplate>
-                                                                <Progress Value="@BannerFilePickers[BannerModules.IndexOf(bannerImages)].GetProgressPercentage()" />
+                                                                <Progress Value="@BannerFilePickers[bannerImages.GroupBy(g => g.ModuleNumber).FirstOrDefault().Key!.Value - 1].GetProgressPercentage()" />
                                                             </ButtonsTemplate>
                                                         </FilePicker>
                                                     </Field>
                                                 </div>
-                                                @if (bannerImages.Count > 0)
+                                                @if (bannerImages.Count > 0 && bannerImages.Any(a => !a.ImageUrl.IsNullOrEmpty()))
                                                 {
                                                     <Div Class="row">
                                                         <Div Class="col-2"></Div>
                                                         <Div Class="col-10">
                                                             <Div Class="image-list-container d-block flex-nowrap">
                                                                 <Div Class="d-flex flex-wrap">
-                                                                    @foreach (CreateImageDto image in bannerImages)
+                                                                    @foreach (CreateImageDto image in bannerImages.Where(w => !w.ImageUrl.IsNullOrEmpty()).ToList())
                                                                     {
                                                                         <Div Class="image-container">
                                                                             <Image class="blur-image" Source="@image.ImageUrl" Text="Carousel Image" Fluid />
@@ -1247,7 +1249,7 @@
                                                                     }
                                                                 </Div>
 
-                                                                @foreach (CreateImageDto createImageDto in bannerImages)
+                                                                @foreach (CreateImageDto createImageDto in bannerImages.Where(w => !w.ImageUrl.IsNullOrEmpty()).ToList())
                                                                 {
                                                                     <button type="button"
                                                                             class="btn btn-primary @(bannerImages.IndexOf(createImageDto) > 0 ? "mx-1" : "")"
