--- a/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
@@ -21,7 +21,7 @@
 
  <div class="row">
      <div class="col-6">
-         <h3>@L["Refunds"]</h3>
+         <h3>@L["RefundsList"]</h3>
      </div>
      <div class="col-6 text-lg-end">
          <div class="input-group">
