--- a/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
@@ -109,7 +109,7 @@
                                     </tr>
                                     <tr>
                                         <td>@L["CreditNoteReason"]</td>
-                                        <td></td>
+                                        <td>@context.CreditNoteReason</td>
                                     </tr>
                                   
                                   
