--- a/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/NewAddOnProduct.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/NewAddOnProduct.razor
@@ -50,7 +50,7 @@
                             @bind-Value="@CreateAddOnProduct.ItemId"
                                       LabelName="@nameof(KeyValueDto.Name)"
                                       ValueName="@nameof(KeyValueDto.Id)"
-                            Placeholder="Select a Product"
+                            Placeholder="@L["SelectaProduct"]"
                             DefaultActiveFirstOption="false"
                             EnableSearch
                             
