Commit For PK-654

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -176,7 +176,7 @@
                  SelectedTabName is PikachuResource.Delivered || 
                  SelectedTabName is PikachuResource.Completed)
             {
-                @if ((Orders.Where(x => x.IsSelected).Count() < 1) || (Orders.Where(x => x.InvoiceNumber is not null && x.IsSelected).Any()))
+                @if ((Orders.Where(x => x.IsSelected).Count() < 1) || (Orders.Where(x => !x.InvoiceNumber.IsNullOrEmpty() && x.IsSelected).Any()))
                 {
                     <Button Type="@ButtonType.Button" disabled Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
